# holonomy

./: .gitignore  PR-Root-Spec-v1.0.1.md  PR-Root-Spec-v1.0.md  README.md  Untitled-1.ipynb  force_density_analysis.py  holonomy_arp_bridge.py  holonomy_mindbenders.py  parity_flip_viewer.py  pyproject.toml  quantum_holonomy.py  scene.json  vibration_support_50Hz.ama
ama_export/fields/: f000_phase.npy  f001_metrics.npy  f002_curvature.npy  f003_parity.npy  f004_winding.npy  f005_sqrt_imag.npy  f005_sqrt_real.npy  f006_branch_cuts.npy
notebooks/: pr_root_demo.ipynb
prroot/: __init__.py  config.py  differentiable.py  operations.py  state.py  viz.py
src/: __init__.py
src/io/: __init__.py  ama_v0_1.py
tests/: test_differentiable.py  test_prroot.py
